# airtrack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
airtrack/: config.py  main.py
airtrack/action_state/: __init__.py  acoustic_profiler.py  bimanual.py  data_collector.py  discriminator.py  keystroke.py  tcn_model.py
airtrack/audio/: finger_classifier.py  recorder.py  swipe_detector.py
airtrack/camera/: capture.py  desk_view.py
airtrack/contact/: __init__.py  bbox_morphology.py  estimator.py  finger_classifier.py  sonar.py  velocity_grouping.py
airtrack/feedback/: haptic.py
airtrack/input/: cursor_controller.py  keyboard_listener.py
airtrack/kinematic/: __init__.py  decoder.py  hid_bridge.py  motion_parser.py  pinch.py
airtrack/ml/: data_collector.py  feature_extractor.py  state_classifier.py  tcn_model.py
airtrack/shared/: __init__.py  calibration.py  camera_capture.py  feedback.py  hand_tracker.py  recorder.py  swipe_detector.py
airtrack/state/: mode_manager.py
airtrack/vision/: calibration.py  hand_tracker.py
models/: audio_features.npz  audio_params.json
scripts/: calibrate.py  mvp_audio_test.py  mvp_audio_train.py  mvp_sonar_test.py
tests/: conftest.py  fakes.py
tests/integration/: test_pipeline.py
tests/unit/: test_calibration.py  test_feature_extractor.py  test_mode_manager.py  test_state_classifier.py  test_tcn_model.py
