[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "airtrack"
version = "0.1.0"
description = "Software-defined virtual trackpad using webcam and on-device AI"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pynput>=1.7",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "torch>=2.2",
    "sounddevice>=0.4.6",
    "scipy>=1.12",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
airtrack = "airtrack.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["airtrack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
